# home_visual

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
crates/backend/: Cargo.toml
crates/backend/src/: auth.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  mqtt.rs  routes.rs  state.rs
crates/backend/src/handlers/: auth_handler.rs  automation_handler.rs  device_handler.rs  home_handler.rs  mod.rs  robot_handler.rs  room_handler.rs  scene_handler.rs
crates/backend/tests/: automation_tests.rs
crates/bevy-visualizer/: Cargo.toml
crates/bevy-visualizer/src/: bridge.rs  camera.rs  devices.rs  floorplan.rs  items.rs  lib.rs  robot.rs  robot_plugin.rs
crates/shared/: Cargo.toml
crates/shared/src/: enums.rs  lib.rs  validation.rs
crates/shared/src/models/: automation.rs  device.rs  home.rs  mod.rs  robot.rs  room.rs  scene.rs  user.rs
docs/api/: openapi.yaml
tauri-app/: package-lock.json  package.json
tauri-app/src-tauri/: tauri.conf.json
