[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

actix-web = "4"
actix-cors = "0.7"
mongodb = "3.7.0"
rumqttc = "0.24"
dotenvy = "0.15"
jsonwebtoken = "9"
bcrypt = "0.16"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
futures-util = "0.3"

[dev-dependencies]
actix-http = "3"

