[package]
name = "bevy-visualizer"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy = { version = "0.15", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png"
] }
crossbeam-channel = "0.5"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement", "console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
