[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.19", features = ["derive"] }
bson = { version = "2", features = ["chrono-0_4", "uuid-1"] }
